--- a/Final Project/register.html
+++ b/Final Project/register.html
@@ -52,7 +52,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-5 col-12 p-0">
-            <img src="/assests/img/banner.jpg" width="100%" height="100%">
+            <img src="./assests/img/banner.jpg" width="100%" height="100%">
         </div>
         <div class="col-md-7 col-12">
             <div class="row">
